Sutter Health/src/objects/Status_and_Ownership_Duration__c.object
<CustomObject>
    <fields>
        <fullName>Business_Hours_In_Days__c</fullName>
        <label>Business Hours In Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Hours_In_Min__c</fullName>
        <label>Business Hours In Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Hours__c</fullName>
        <label>Business Hours In Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Status and Ownership Durations</relationshipLabel>
        <relationshipName>Status_and_Ownership_Durations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Intent__c</fullName>
        <label>Customer Intent</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Sub_Intent__c</fullName>
        <label>Customer Sub Intent</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>Time In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <label>Function</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <label>Owner</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Power_Of_One__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Power Of One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the Case</description>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Function__c</fullName>
        <label>Sub Function</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Formula__c</fullName>
        <formula>(Until__c -  From__c)*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Until__c</fullName>
        <label>Time Out</label>
        <type>DateTime</type>
    </fields>
    <label>Status and Ownership Duration</label>
    <nameField>
        <displayFormat>SO-{0000}</displayFormat>
        <label>Status and Ownership Duration</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Status and Ownership Durations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>